--- a/a.css
+++ b/a.css
@@ -1,35 +1,49 @@
-    #yin-yang {
-      width: 96px;
-      box-sizing: content-box;
-      height: 48px;
-      background: #eee;
-      border-color: red;
-      border-style: solid;
-      border-width: 2px 2px 50px 2px;
-      border-radius: 100%;
-      position: relative;
-    }
-    #yin-yang:before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 0;
-      background: #eee;
-      border: 18px solid red;
-      border-radius: 100%;
-      width: 12px;
-      height: 12px;
-      box-sizing: content-box;
-    }
-    #yin-yang:after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      background: red;
-      border: 18px solid #eee;
-      border-radius: 100%;
-      width: 12px;
-      height: 12px;
-      box-sizing: content-box;
-    }
+@keyframes slidein {
+  from {
+    transform: rotate(0deg);
+  } 
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+body{
+  background: #666;
+}
+p{
+  text-align: center;
+  color:#fff;
+}
+#yinyang{
+  width:200px;
+  height:200px;
+  border-radius:50%;
+  background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%,#000000 50%,#000000 50%);
+  position: relative;
+  margin:100px auto;
+  animation-name: slidein;
+  animation-duration: 3s;
+  animation-iteration-count:infinite;
+}
+#yinyang::before{
+  content: '';
+  width:20px;
+  height:20px;
+  background: #fff;
+  border-radius:50%;
+  position: absolute;
+  top:50px;
+  left:0;
+  border:40px solid #000;
+}
+#yinyang::after{
+  content: '';
+  width:20px;
+  height:20px;
+  background: #000;
+  border-radius:50%;
+  position: absolute;
+  top:50px;
+  right:0px;
+  border:40px solid #fff;
+}
